separação de testes e mostrar nomes das cores em tela